--- a/.github/workflows/haproxy.yml
+++ b/.github/workflows/haproxy.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Build and publish on Dockerhub
-      uses: elgohr/Publish-Docker-Github-Action@master
+      uses: elgohr/Publish-Docker-Github-Action@v5
       with:
         name: matmu/haproxy
         username: ${{ secrets.DOCKER_USER }}
